<resources>
    <string name="app_name">TrackEnsureTest</string>
    <string name="placeholder">placeholder</string>

    <!-- strings for DialogFragments -->
    <string name="edit_station_header">Change station name:</string>
    <string name="add_record_header">Add record:</string>
    <string name="station_name">Station Name</string>
    <string name="price">Price</string>
    <string name="CAD">CAD per liter</string>
    <string name="quantity">Quantity</string>
    <string name="liters">liters</string>
    <string name="button_save">Save</string>
    <string name="button_dismiss">Dismiss</string>

    <!-- strings for OptionsMenu -->
    <string name="action_sign_out">Sign out</string>

    <!-- ViewPager tab headers -->
    <string name="favorites_tab_header">Favorites</string>
    <string name="statistics_tab_header">Statistics</string>

    <!-- statistics strings -->
    <string name="total_money_spent">Total money spent: %.02f CAD</string>
    <string name="total_fuel_consumed">Total fuel consumed: %d liters</string>

    <!-- toast messages -->
    <string name="sign_in_canceled">Sign in canceled</string>
    <string name="location_access_denied">Access to your location is needed to display map</string>
    <string name="internet_access_denied">Internet access is needed to access gas stations info</string>
    <string name="empty_field_warning">This field cannot be empty</string>
    <string name="saved">Saved</string>

    <!-- firebase strings for Toasts and Logs -->
    <string name="saved_to_remote_database">Saved to remote database</string>
    <string name="will_be_saved_later">Will be saved when internet connection is resumed</string>
    <string name="error_saving">Saving to remote database failure</string>
    <string name="updated_in_remote_database">Updated in remote database</string>
    <string name="will_be_updated_later">Will be updated when internet connection is resumed</string>
    <string name="error_updating">Updating in remote database failure</string>
    <string name="deleted_in_remote_database">Deleted in remote database</string>
    <string name="will_be_deleted_later">Will be deleted when internet connection is resumed</string>
    <string name="error_deleting">Deleting in remote database failure</string>

    <!-- firebase collections / bundle keys -->
    <string name="stations">stations</string>
    <string name="fueling_acts">fueling_acts</string>
    <string name="firebase_action_flag">firebase_action_flag</string>

    <!-- job log strings -->
    <string name="job_scheduled">job scheduled</string>
    <string name="job_scheduling_failed">job scheduling failed</string>

    <string name="notification_channel_name">remote database notification channel</string>
    <string name="notification_channel_description">channel for remote database updates</string>
    <string name="notification_title">database sync</string>
    <string name="notification_upload_text">%s added to firebase at %s</string>
    <string name="notification_update_text">%s updated in firebase at %s</string>
    <string name="notification_delete_text">%s deleted from firebase at %s</string>

</resources>
