<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <EditText
        android:id="@+id/station_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/station_name"
        android:inputType="textCapWords"
        android:maxLength="100"
        android:textSize="@dimen/textSize" />

    <Spinner
        android:id="@+id/fuel_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/price_per_liter_edittext"
            tools:text="1.11"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CAD"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/number_of_liters_edittext"
            tools:text="111"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liters"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_dialog_dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/button_dismiss"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/add_dialog_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@string/button_save"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>
