<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/standard_margin"
    android:layout_marginBottom="@dimen/standard_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/station_name"
        android:inputType="textCapWords"
        android:maxLength="100"
        android:textSize="@dimen/bigTextSize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/double_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_dialog_dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:text="@string/button_dismiss"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/edit_dialog_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:text="@string/button_save"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>